SalesforceRecruitingOnSecondOrg/src/objects/Job_Advertisement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legacy_Job_Advertisement_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Job Advertisement Number</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_name__c</fullName>
        <label>Manager name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Salary__c</fullName>
        <label>Maximum Salary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Salary__c</fullName>
        <label>Minimum Salary</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Job Advertisement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JobAdvertisements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>